<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_image_loading_library">Glide Image Loading Library</string>
    <string name="load_app_current_repo">Load App Current Repo</string>
    <string name="retrofit_type_safe_http">Retrofit - Type Safe HTTP</string>
    <string name="download_picture">Download Picture</string>
    <string name="file_name">File Name</string>
    <string name="status">Status</string>
    <string name="ok">Ok</string>
    <string name="download">Download</string>

</resources>
