<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_assistant_black_24dp"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/download_picture" />

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="116dp"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.643">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/load_app_current_repo"
            android:id="@+id/project"
            android:textSize="20sp">

        </RadioButton>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/glide"
            android:text="@string/glide_image_loading_library"
            android:textSize="20sp">

        </RadioButton>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/retrofit"
            android:text="@string/retrofit_type_safe_http"
            android:textSize="20sp">

        </RadioButton>
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>